fix disposition of chosen on column

--- a/app/assets/stylesheets/_chosen.scss
+++ b/app/assets/stylesheets/_chosen.scss
@@ -22,6 +22,8 @@
 	}
 	.chosen-container-single .chosen-single span {
 		display: inline;
+		color: rgba(15,48,70,.3);
+    	font-weight: normal;
 	}
 	.chosen-container-active.chosen-with-drop {
 		z-index: 1;
