--- a/app/views/network_projects/_form.html.erb
+++ b/app/views/network_projects/_form.html.erb
@@ -34,42 +34,22 @@
 		<span class="-item">lead</span>
 	</div>
 	<div class="c-staff -row">
-		<div class="-item">
+		<div class="-item -m-edited">
 			<select name="investigators" class="chosen-select" data-placeholder="Select or add investigator">
-                <option value="">Select or add investigator</option>
+                <option value="">John Sample</option>
               </select>
 		</div>
-		<div class="-item">
+		<div class="-item -m-edited">
 			<select name="organizations" class="chosen-select" data-placeholder="Select or add investigation">
-                <option value="">Select or add investigation</option>
+                <option value="">Random organization</option>
               </select>
 		</div>
-		<div class="-item">
+		<div class="-item -m-edited">
 			<select name="address" class="chosen-select" data-placeholder="Select or add investigation">
-                <option value="">Select or add address</option>
+                <option value="">Somewhere</option>
               </select>
 		</div>
-		<div class="-item">
-			<label for="tick-lead-0"></label><input type="checkbox" id="tick-lead-0"><span class="circle"></span>
-		</div>
-	</div>
-	<div class="c-staff -row">
-		<div class="-item">
-			<select name="investigators" class="chosen-select" data-placeholder="Select or add investigator">
-                <option value="">Select or add investigator</option>
-              </select>
-		</div>
-		<div class="-item">
-			<select name="organizations" class="chosen-select" data-placeholder="Select or add investigation">
-                <option value="">Select or add investigation</option>
-              </select>
-		</div>
-		<div class="-item">
-			<select name="address" class="chosen-select" data-placeholder="Select or add investigation">
-                <option value="">Select or add address</option>
-              </select>
-		</div>
-		<div class="-item">
+		<div class="-item -m-edited">
 			<label for="tick-lead-1"></label><input type="checkbox" id="tick-lead-1"><span class="circle"></span>
 		</div>
 	</div>
@@ -90,27 +70,7 @@
               </select>
 		</div>
 		<div class="-item">
-			<label for="tick-lead-2"></label><input type="checkbox" id="tick-lead-2"><span class="circle"></span>
-		</div>
-	</div>
-	<div class="c-staff -row">
-		<div class="-item">
-			<select name="investigators" class="chosen-select" data-placeholder="Select or add investigator">
-                <option value="">Select or add investigator</option>
-              </select>
-		</div>
-		<div class="-item">
-			<select name="organizations" class="chosen-select" data-placeholder="Select or add investigation">
-                <option value="">Select or add investigation</option>
-              </select>
-		</div>
-		<div class="-item">
-			<select name="address" class="chosen-select" data-placeholder="Select or add investigation">
-                <option value="">Select or add address</option>
-              </select>
-		</div>
-		<div class="-item">
-			<label for="tick-lead-3"></label><input type="checkbox" id="tick-lead-3"><span class="circle"></span>
+			<label for="tick-lead-0"></label><input type="checkbox" id="tick-lead-0"><span class="circle"></span>
 		</div>
 	</div>
 </div>
