--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -113,7 +113,7 @@
       flex-basis: 20px;
       flex-shrink: 0;
       cursor: pointer;
-      z-index: 3;
+      z-index: 1003;
       -webkit-tap-highlight-color: transparent;
 
       > span {
@@ -137,7 +137,7 @@
     will-change: opacity;
     transition: opacity .3s ease-out, visibility 0s linear .3s;
     background: $color-3;
-    z-index: 2;
+    z-index: 1002;
 
     @media screen and (min-width: 870px) {
       display: none;
@@ -147,6 +147,49 @@
       visibility: visible;
       opacity: 1;
       transition: opacity .3s ease-out, visibility 0s linear 0s;
+
+      & .menu {
+        border-bottom: 1px solid rgba(0, 0, 0, .3);
+        margin-bottom: 30px;
+
+        &.-color-1 * { color: $color-1; }
+
+        &:last-child {
+          border-bottom: 0;
+        }
+
+        li {
+          text-align: center;
+          margin-bottom: 30px;
+
+          &.user-avatar {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 40px;
+
+            & .c-user-profile-picture {
+              cursor: default;
+            }
+
+            .c-badge {
+              position: absolute;
+              top: 5px;
+              right: 6px;
+            }
+          }
+
+          & a {
+            font-weight: $font-weight-bold;
+            font-size: $font-size-normal;
+            color: $color-2;
+            text-transform: uppercase;
+
+            &:hover {
+              opacity: .5;
+            }
+          }
+        }
+      }
 
       /* The hamburger icon transform into a close one */
       & + .wrapper .hamburger-menu span {
