--- a/app/views/map/_map-filters.html.erb
+++ b/app/views/map/_map-filters.html.erb
@@ -9,7 +9,7 @@
     <!-- Modal wrapper button -->
     <div class="modal-wrapper">
       <div class="modal-content">
-        <form action="">
+        <form id="map-filters-form" action="">
         <input type="hidden" name="type" value="<%= request.query_parameters['type'] %>">
 
           <h2 class='modal-title'>Filters</h2>
