--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,2 +1,31 @@
-<h1>Projects#show</h1>
-<p>Find me in app/views/projects/show.html.erb</p>
+<section class="country">
+  <div class="c-section-intro -color-4">
+    <div id="map" class="map c-map">
+      <div class="c-map-intro-legend">
+        <ul class="legend-list">
+          <li class="item"><div class="icon -first"></div><%= t 'project_leads' %></li>
+          <li class="item"><div class="icon -second"></div><%= t 'collaborators' %></li>
+        </ul>
+        <div class="viel"></div>
+      </div>
+    </div>
+    <div class="intro-info">
+      <div class="info">
+        <h1 class="c-title -big"><%= @project.title %></h1>
+
+      </div>
+      <div class="c-buttons-group">
+        <a href="/" class="c-button -inverse -filled btn-large">Follow</a>
+        <div class="row-buttons">
+          <a href="/" class="c-button -inverse">Share</a>
+          <a href="/" class="c-button -inverse">Contact</a>
+          <a href="/" class="c-button -inverse">More</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="c-card-grid" id="content">
+    <%= render(:partial => @current_type) %>
+  </div>
+
+</section>
