Map issue solved

--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,5 +1,5 @@
 <div class="c-section-intro">
-	<div id="map" class="map c-map" data-turbolinks-permanent></div>
+	<div id="map" class="map c-map"></div>
 	<ul class="c-section-menu">
 	   <% @filters.each do |filter| %>
       <li>
