--- a/app/assets/stylesheets/components/_projects-fields.scss
+++ b/app/assets/stylesheets/components/_projects-fields.scss
@@ -1,4 +1,11 @@
-
+/**
+    <div class="c-period-bar">
+      <div class="project-field">
+        <h4 class="c-title">{ Title }</h4>
+        <ul class="data">{ Content }</ul> or <p class="data">{ Content }<p>
+      </div>
+    </div>
+ */
 
 .c-projects-fields {
   .project-field {
