--- a/app/assets/stylesheets/layouts/_project_add.scss
+++ b/app/assets/stylesheets/layouts/_project_add.scss
@@ -13,6 +13,11 @@
 	.c-section-container {
 	  	display: table;
 	  	border-bottom: 1px solid rgba(0, 0, 0, .15);
+
+	  	&:last-of-type {
+	  		border: none;
+	  	}
+
 	  	&.-staff {
 	  		width: 100%;
 			padding: 50px;
@@ -109,7 +114,7 @@
 			height: 20px;
 		}
 		.f-accept-terms {
-			margin: 15px 0 0;
+			margin: 25px 0 0;
 		}
 	}
 }
@@ -125,6 +130,19 @@
     margin: 30px 0 0;
 }
 
+.f-submit {
+	width: 130px;
+	height: 45px;
+	background-color: #68299b;
+	line-height: 45px;
+	font-weight: $font-weight-bold;
+	text-align: center;
+	font-size: $font-size-x-small;
+	color: #fff;
+	text-transform: uppercase;
+    border: none;
+    margin: 0 50px 50px;
+}
 
 @media all and (max-width: 1024px) {
 	.separator {
