--- a/app/views/network_projects/_form.html.erb
+++ b/app/views/network_projects/_form.html.erb
@@ -4,7 +4,7 @@
 <div class="c-section-container">
 	<div class="c-section-half -left">
 		<h3 class="c-section-title">Description</h3>
-		<%= form.input :summary %>
+		<%= form.input :summary, label: false %>
 	</div>
 	<div class="c-section-half">
 		<div class="c-pickadate">
@@ -19,13 +19,14 @@
 		<span class="separator"></span>
 		<%= form.input :project_website, as: :string, label: 'project website', label_html: { class: 'c-section-title -one-line'}, input_html: {placeholder: 'http://example.org/', class: '-input-line'}, :required => false %>
 		<span class="separator"></span>
-		<%= form.input :project_types, as: :select, label: 'project type', label_html: { class: 'c-section-title -one-line'}, input_html: {class: 'chosen-select'} %>
+		<%= form.input :project_type_ids, as: :collection_select, collection: @project_types, label: 'project type', label_html: { class: 'c-section-title -one-line'}, input_html: {class: 'chosen-select'} %>
 		<span class="separator"></span>
-		<%= form.input :cancer_types, as: :select, label: 'cancer type', label_html: { class: 'c-section-title -one-line'}, input_html: {class: 'chosen-select'} %>
+		<%= form.input :cancer_type_ids, as: :collection_select, collection: @cancer_types, label: 'cancer type', label_html: { class: 'c-section-title -one-line'}, input_html: {class: 'chosen-select'} %>
 		<span class="separator"></span>
-		<%= form.input :project_website, as: :string, label: 'funding source', label_html: { class: 'c-section-title -one-line'}, input_html: {placeholder: 'Name', class: '-input-line'}, :required => false %>
+		<%= form.input :funding_source_ids, as: :collection_select, collection: @funders, label: 'funding source', label_html: { class: 'c-section-title -one-line'}, input_html: {class: 'chosen-select'} %>
 	</div>
 </div>
+
 <div class="c-section-container -staff">
 	<div class="c-staff -headers">
 		<span class="-item">investigator</span>
@@ -33,6 +34,7 @@
 		<span class="-item">address</span>
 		<span class="-item">lead</span>
 	</div>
+
 	<div class="c-staff -row">
 		<div class="-item -m-edited">
 			<select name="investigators" class="chosen-select" data-placeholder="Select or add investigator">
@@ -53,6 +55,7 @@
 			<label for="tick-lead-1"></label><input type="checkbox" id="tick-lead-1"><span class="circle"></span>
 		</div>
 	</div>
+
 	<div class="c-staff -row">
 		<div class="-item">
 			<select name="investigators" class="chosen-select" data-placeholder="Select or add investigator">
@@ -73,7 +76,59 @@
 			<label for="tick-lead-0"></label><input type="checkbox" id="tick-lead-0"><span class="circle"></span>
 		</div>
 	</div>
+
+  <h3>Investigators</h3>
+
+  <div>
+    <%= form.fields_for :investigators do |investigators_form| %>
+      <%= render 'investigator_relation_form', f: investigators_form %>
+    <% end %>
+  </div>
+
+  <div>
+    <%= form.fields_for :memberships do |memberships_form| %>
+      <%= render 'membership_relation_form', f: memberships_form %>
+    <% end %>
+    <p class="add-button">
+      <%= add_membership_path 'Add new', form, :memberships, 'add_fields add_investigator' %>
+    </p>
+  </div>
+
+  <h3>Organizations</h3>
+
+  <div>
+    <%= form.fields_for :organizations do |organizations_form| %>
+      <%= render 'organization_relation_form', f: organizations_form %>
+    <% end %>
+  </div>
+
+  <div>
+    <%= form.fields_for :memberships do |memberships_form| %>
+      <%= render 'membership_orga_relation_form', f: memberships_form %>
+    <% end %>
+    <p class="add-button">
+      <%= add_membership_orga_path 'Add new', form, :memberships, 'add_fields add_organization' %>
+    </p>
+  </div>
+
+  <h3>Addresses</h3>
+
+  <div>
+    <%= form.fields_for :addresses do |addresses_form| %>
+      <%= render 'address_relation_form', f: addresses_form %>
+    <% end %>
+  </div>
+
+  <div>
+    <%= form.fields_for :memberships do |memberships_form| %>
+      <%= render 'membership_address_relation_form', f: memberships_form %>
+    <% end %>
+    <p class="add-button">
+      <%= add_membership_address_path 'Add new', form, :memberships, 'add_fields add_address' %>
+    </p>
+  </div>
 </div>
+
 <div class="c-section-container -staff">
 	<div class="c-staff -row">
 		Submitted information will be verified by the GCPM team to ensure data quality, and may be standardized and/or formatted for consistency before it is published. Checking this box acknowledges that you agree to share this information for public display on the Global Cancer Project Map.
