--- a/app/views/users/_projects.html.erb
+++ b/app/views/users/_projects.html.erb
@@ -1,21 +1,24 @@
 <h3 class="c-title -normal -grid wrapper"><%= t "your_projects" %></h3>
 <!-- c-grid-projects -->
-<div class="c-card-grid">
-  <% @projects.each do |p| %>
+<div class="c-card-grid" id="content">
+  <!-- Provisional loop  -->
+  <% @projects.each do |project| %>
     <div class="card -mobile-large-1-2 -tablet-1-3">
       <h4 class="c-card-title -border-1"><%= t 'active' %></h4>
-      <a>
-        <h3 class="c-title"><%= p.title %></h3>
-      </a>
+      <%= link_to user_project_path(@user, project) do %>
+        <h3 class="c-title"><%= project.title %></h3>
+      <% end %>
       <div class="c-tag-list -closer">
-        <% p.cancer_types.each do |t| %>
+        <% project.cancer_types.each do |t| %>
         <p class="tag"><%= t.name %></p>
         <% end %>
       </div>
-      <%= link_to (t 'edit'), edit_user_project_path(current_user, p['id'] ), {:class => "c-button -color-3 -network"} %>
+      <% if user_signed_in? && @user == current_user %>
+        <%= link_to t('edit'), edit_user_project_path(@user, project), class: "c-button -color-3 -network" %>
+        <%= link_to t('delete'), user_project_path(@user, project), data: { confirm: 'Are You sure?' }, method: :delete, class: "c-button -color-3 -network" %>
+      <% end %>
     </div>
   <% end %>
-
 </div>
 
 <h3 class="c-title -normal -grid wrapper"><%= t "following" %></h3>
