--- a/app/views/map/_map-menu.html.erb
+++ b/app/views/map/_map-menu.html.erb
@@ -1,4 +1,4 @@
-<div id="map-menu" class="c-map-menu wrapper">
+<div id="map-menu" class="c-map-menu wrapper" data-turbolinks-permanent>
   <ul class="list">
     <li>
       <button class="item btn-mapmenu-action -color-1" data-action="Layers/toggle">
