--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,5 +1,5 @@
 <div class="c-section-intro">
-	<div id="map" class="map c-map"></div>
+	<div id="map" class="map c-map" data-turbolinks-permanent></div>
 	<ul class="c-section-menu">
 	   <% @filters.each do |filter| %>
       <li>
@@ -7,7 +7,7 @@
           map_path(request.query_parameters.merge({ type: filter })),
           class: active_param?('type', filter),
           remote: true,
-          data: {magic: true} %>
+          data: { magic: true } %>
       </li>
     <% end %>
 	</ul>
