--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,1 +1,6 @@
-<%= render partial: 'form' %>
+<div class="project_add">
+  <%= simple_form_for [@user, @event], url: user_events_url(@user) do |f| %>
+    <%= render partial: f %>
+    <%= f.button :submit, 'Submit', class: '' %>
+  <% end %>
+</div>
