--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Events#show</h1>
-<p>Find me in app/views/events/show.html.erb</p>
+<%= @event.title %>
+<div>
+<%= @event.summary %>
+</div>
+<%= link_to 'Edit', edit_user_event_path(@user, @event) %>
+
+
