--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <%= render "shared/icons" %>
     <%= render "shared/header" %>
     <% if alert %>
       <%= alert %>
