--- a/app/views/map/_map-filters.html.erb
+++ b/app/views/map/_map-filters.html.erb
@@ -1,4 +1,4 @@
-<div id="map-filters" class="c-modal" data-turbolinks-permanent>
+<div id="map-filters" class="c-modal">
   <!-- WINDOW -->
   <div class="modal-window">
     <!-- Modal close button -->
