Download footer link

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,6 +8,8 @@
         <li class="-notext -facebook"><a href="https://www.facebook.com/globalonc" target="_blank" rel="noreferrer" title="Facebook">Facebook</a></li>
       </ul>
       <ul class="menu">
+        <li><%= link_to (t 'download'), download_user_manual_path, class: "-color-1", download: 'User Manual', data: {turbolinks: false} %></a></li>
+        <li class="separator"></li>
         <li><%= link_to (t 'map'), map_path %></a></li>
         <li><%= link_to (t 'countries'), countries_path %></a></li>
         <li><%= link_to (t 'cancer_types'), cancers_path %></a></li>
