--- a/app/views/map/_events.html.erb
+++ b/app/views/map/_events.html.erb
@@ -1,1 +1,49 @@
-<h1>Events</h1>
+<div class="card -1-2 -tablet-1-4">
+  <h4 class="c-legend-title">
+    <div class="icon -color-3"></div>
+    Breast
+  </h4>
+  <h2 class="c-title -big">215</h2>
+</div>
+
+<div class="card -1-2 -tablet-1-4">
+  <h4 class="c-legend-title">
+    <div class="icon -color-2"></div>
+    NON-MELANOMA SKIN CANCER
+  </h4>
+  <h2 class="c-title -big">215</h2>
+</div>
+
+<div class="card -1-2 -tablet-1-4">
+  <h4 class="c-legend-title">
+    <div class="icon"></div>
+    TRACHEA, BRONCHUS AND LUNG
+  </h4>
+  <h2 class="c-title -big">215</h2>
+</div>
+
+<div class="card -1-2 -tablet-1-4">
+  <h4 class="c-legend-title">
+    <div class="icon -color-4"></div>
+    Other
+  </h4>
+  <h2 class="c-title -big">215</h2>
+</div>
+
+<!-- Events cards -->
+<% @events.each do |e| %>
+  <div class="card -mobile-large-1-2 -tablet-1-3">
+    <a href="<%= e.website %>" target="_blank" class="link">
+      <h3 class="c-title"><%= e.title %></h3>
+    </a>
+    <p><%= truncate(e.description, :length => 300) %></p>
+  </div>
+<% end %>
+
+<div class="c-pagination-button">
+  <%= link_to (t 'show_more'),
+          map_path(request.query_parameters.merge({ limit: (params['limit'] ? params['limit'].to_i + 1 : 2 )  })),
+          class: "circle-button",
+          remote: true,
+          data: {magic: true} %>
+</div>
