--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -28,7 +28,8 @@
                 </ul>
 
                 <ul class="user-tools menu-section -color-2">
-                  <li class="item"><%= link_to (t 'add_project'), '/', {:class => "item-link", :method => :get} %></li>
+                  <li class="item"><%= link_to (t 'add_project'), new_user_project_path(user_id: current_user.id), {:class => "item-link", :method => :get} %></li>
+                  <li class="item"><%= link_to (t 'add_event'), new_user_event_path(user_id: current_user.id), {:class => "item-link", :method => :get} %></li>
                 </ul>
               </div>
             </div>
@@ -46,7 +47,6 @@
       <li class="<%= active_page?(countries_path) ? '-active' : '' %>"><%= link_to (t 'countries'), countries_path %></a></li>
       <li class="<%= active_page?(cancers_path) ? '-active' : '' %>"><%= link_to (t 'cancer_types'), cancers_path %></a></li>
       <li class="<%= active_page?(about_path) ? '-active' : '' %>"><%= link_to (t 'about'), about_path %></a></li>
-      <li class="<%= active_page?(new_user_session_path) ? '-active' : '' %>"><%= link_to (t 'login'), new_user_session_path %></a></li>
       <li><img src="" class="btn-search"></li>
       <% if user_signed_in? %>
         <li class="user-avatar">
