Section menu item active fix

--- a/app/assets/stylesheets/components/_section-intro.scss
+++ b/app/assets/stylesheets/components/_section-intro.scss
@@ -78,6 +78,10 @@
       }
     }
 
+    .c-numbers-grid {
+      color: $color-3;
+    }
+
     .c-buttons-group {
       @media #{$mq-tablet} {
         margin-top: 100px;
