--- a/app/views/map/index.js.erb
+++ b/app/views/map/index.js.erb
@@ -1,5 +1,5 @@
 (function(App) {
-  'use strict';
+  'use strict'
   App.Events.trigger('remote:load', {
     content: "<%= j render(:partial => @current_type) %>"
   });
