--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 
-<section class="network">
+<section class="country">
   <div class="c-section-intro -color-4">
     <div id="map" class="map c-map">
       <div class="c-map-intro-legend">
