--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -2,16 +2,19 @@
 	<div id="map" class="map c-map" data-turbolinks-permanent></div>
 	<ul class="c-section-menu">
 	   <% @filters.each do |filter| %>
+      <% @class = !params['type'] && filter == "projects" ? "-active" : active_param?('type', filter) %>
       <li>
         <%= link_to (t filter),
           map_path(request.query_parameters.merge({ type: filter })),
-          class: active_param?('type', filter),
+          class: @class,
+          id: "mn-" + filter,
           remote: true,
           data: { magic: true } %>
       </li>
     <% end %>
 	</ul>
 </div>
+
 
 <div id="map-layers-tooltip" class="c-tooltip -tip-left">
 	hola, soy tooltip y tú?
@@ -28,7 +31,3 @@
   <%= render(:partial => @current_type) %>
 </div>
 
-<!--
-<%= link_to 'Load project', controller: 'map', action: 'index',
-    format: 'js', remote: true %>
- -->
